[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex="1"
serde_json="1.0.89"
serde="1.0.15"
termion="2.0.1"
colored="2.1.0"
tokio = { version = "1", features = ["full"] }
clap= { version="4.4.11", features=["derive"] }